--- a/flaskr/templates/forms.html
+++ b/flaskr/templates/forms.html
@@ -1,13 +1,35 @@
-{% macro render_field(field) %}
-<div>
-    {{ field.label }}
-    {{ field(class='form-control is-invalid' if field.errors else 'form-control') | safe }} 
-    {% if field.errors %}
-    <div class="invalid-feedback">
-        {% for error in field.errors %}
-        {{ error }}
-        {% endfor %}
-    </div>
-    {% endif %}
+{% macro render_field(field, label=false) %}
+{% if label %}
+{{ field.label }}
+{% endif %}
+{{ field(class='form-control is-invalid' if field.errors else 'form-control', **kwargs) | safe }} 
+
+{% if field.errors %}
+<div class="invalid-feedback">
+    {% for error in field.errors %}
+    {{ error }}
+    {% endfor %}
 </div>
+{% endif %}
+
+{% if field.description %}
+<small class="form-text text-muted">{{ field.description }}</small>
+{% endif %}
+{% endmacro %}
+
+{% macro render_radio(field) %}
+{% for radio in field %}
+<div class="form-check form-check-inline">
+    {{ radio(class="form-check-input", **kwargs) | safe }}
+    {{ radio.label(class="form-check-label") }}
+</div>
+{% endfor %}
+{% if field.description %}
+<small class="form-text text-muted">{{ field.description }}</small>
+{% endif %}
+{% endmacro %}
+
+{% macro render_checkbox(field) %}
+{{ field(class="form-check-input", **kwargs) }}
+{{ field.label(class="form-check-label") }}
 {% endmacro %}
