--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -16,7 +16,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js" 
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
             crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/socket.io-client@3.0.1/dist/socket.io.min.js"></script>
+        <script src="{{ url_for('static', filename='base.js') }}" 
+            type="text/javascript" charset="utf-8"></script>
         {% block head %}{% endblock %} 
     </head>
     {% block body %}{% endblock %}
